[tool.poetry]
name = "srt-translate"
version = "0.1.0"
description = ""
authors = ["Michael DeFreitas <mikeylove@gmail.com>"]
license = "GPLv3"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
srt = "^3.5.3"
translators = "^5.9.2"
deep-translator = "^1.11.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
